# dns_cache

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/cache/: CMakeLists.txt  dns_cache.cpp  dns_cache.hpp  shared_m.hpp
test/: CMakeLists.txt
test/src/: cache_tests.cpp  perf_tests.cpp
